# ecs-rs

./: Cargo.toml  entity_example.json
src/: archetype.rs  archetypes.rs  assets.rs  blob_vec.rs  borrow_traits.rs  children_iter.rs  either.rs  entity.rs  entity_parser.rs  events.rs  expect_fn.rs  filter_mask.rs  identifier.rs  impl_tuple_helper.rs  lib.rs  locals.rs  lua_api.rs  lua_macros.rs  main.rs  on_change_callbacks.rs  plugin.rs  plugins.rs  query.rs  query_structs.rs  relationship.rs  resources.rs  systems.rs  table.rs  world.rs  wrappers.rs
src/components/: component.rs  component_bundle.rs  component_hash.rs  component_query.rs  components_iter.rs  mod.rs  register.rs  temp_components.rs  test_components.rs
