[package]
name = "ecs_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bevy_ptr = "0.14.0"
bevy_reflect = "0.14.2"
bevy_utils = "0.13.2"
bimap = "0.6.3"
downcast-rs = "1.2.1"
next-gen = "0.1.1"
once_cell = "1.19.0"
packed_struct = "0.10.1"
polonius-the-crab = "0.4.1"
smol_str = "0.2.2"
tynm = "0.1.10"
