[package]
name = "ecs_v2"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bevy_ptr = "0.14.0"
bevy_reflect = "0.14.2"
bevy_utils = "0.13.2"
bimap = "0.6.3"
const_format = {version="0.2.33",features = ["fmt"]}
downcast-rs = "1.2.1"
educe = "0.6.0"
egui = "0.29.1"
log = "0.4.22"
luaparse = "0.2.0"
macro_rules_attribute = "0.2.0"
mlua = {version="0.9.9", features = ["luajit52", "serialize"]}
next-gen = "0.1.1"
num = "0.4.3"
once_cell = "1.19.0"
packed_struct = "0.10.1"
paste = "1.0.15"
polonius-the-crab = "0.4.1"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
smol_str = "0.2.2"
thiserror = "1.0.63"
tynm = "0.1.10"
